validate, scope, button

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -21,6 +21,7 @@
           <%= link_to "All #{Goal.count}", goals_path,  class: "main-tab__item #{'main-tab__item--active' if params[:filter].blank?}" %>
           <%= link_to "Incomplete #{Goal.incomplete.count}", goals_path(filter: 'incomplete'),  class: "main-tab__item #{'main-tab__item--active' if params[:filter] == 'incomplete'}" %>
           <%= link_to "Completed #{Goal.completed.count}", goals_path(filter: 'completed'),  class: "main-tab__item #{'main-tab__item--active' if params[:filter] == 'completed'} " %>
+          <%= link_to "Today #{Goal.today.count}", goals_path(filter: 'today'),  class: "main-tab__item #{'main-tab__item--active' if params[:filter] == 'today'} " %>
         </div>
         <div class="d-none d-md-block">
           <%= link_to 'Create a Goal', new_goal_path,  class: "main-btn main-btn--xs" %>
